--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -32,6 +32,7 @@ steps:
     cloudFoundry:
       org: 'CF-ORG-CSM-E2E-DEMOS'
       space: 'CSM-E2E-DEMOS-DWC-SPACE'
+      apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'      
       credentialsId: 'CF_CREDENTIALSID'
 #  mavenExecute:
 #    dockerImage: devxci/mbtci:1.0.14
