--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -33,7 +33,7 @@ steps:
       org: 'CF-ORG-CSM-E2E-DEMOS'
       space: 'CSM-E2E-DEMOS-DWC-SPACE'
       apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'      
-      credentialsId: 'CF_CREDENTIALSID'
+      credentialsId: 'cf-credentialsid'
 #  mavenExecute:
 #    dockerImage: devxci/mbtci:1.0.14
 
