--- a/.pipeline/config.yml
+++ b/.pipeline/config.yml
@@ -17,23 +17,40 @@
 # This is a YAML-file. YAML is a indentation-sensitive file format. Please make sure to properly indent changes to it.
 ###
 
+# Project configuration
+general:
+  projectName: 'csm-demo-202002-actuals-cap'
+  productiveBranch: 'main'
+
+# Stage configuration
+stages:
+  productionDeployment:
+    cfTargets:
+    - org: 'CF-ORG-CSM-E2E-DEMOS'
+      space: 'CSM-E2E-DEMOS-DWC-SPACE'
+      appName: 'csm-demo-202002-actuals-cap-srv'
+      apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'
+      credentialsId: 'cf-credentialsid'
+
+
+
 
 
 ### General project setup
-general:
+#general:
 
 ### Step-specific configuration
-steps:
-  mtaBuild:
-    buildTarget: 'CF'
-  cloudFoundryDeploy:
-    deployTool: 'mtaDeployPlugin'
-    deployType: 'standard'
-    cloudFoundry:
-      apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'      
-      org: 'CF-ORG-CSM-E2E-DEMOS'
-      space: 'CSM-E2E-DEMOS-DWC-SPACE'
-      credentialsId: 'cf-credentialsid'
+#steps:
+#  mtaBuild:
+#    buildTarget: 'CF'
+#  cloudFoundryDeploy:
+#    deployTool: 'mtaDeployPlugin'
+#    deployType: 'standard'
+#    cloudFoundry:
+#      apiEndpoint: 'https://api.cf.eu10.hana.ondemand.com'      
+#      org: 'CF-ORG-CSM-E2E-DEMOS'
+#      space: 'CSM-E2E-DEMOS-DWC-SPACE'
+#      credentialsId: 'cf-credentialsid'
 #  mavenExecute:
 #    dockerImage: devxci/mbtci:1.0.14
 
